- update gulfile config

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,45 +1,19 @@
-@import "fonts";
 
-@mixin font($font_name, $file_name, $weight, $style) {
-	@font-face {
-		font-family: $font_name;
-		font-display: swap;
-		src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
-		font-weight: #{$weight};
-		font-style: #{$style};
-	}
+@import 'container';
+@import 'demo';
+
+* {
+	margin: 0;
+	padding: 0;
 }
 
-// for tamplate
+li {
+	list-style: none;
+	white-space: nowrap;
+}
 
+
+html,
 body {
-	background-color: rgb(108, 106, 103);
-}
-h1 {
-	color: rgb(255, 255, 255);
-}
-
-body {
-	font-size: 15px;
-	display: flex;
-}
-div {
-	background: url("../images/screen.jpg") no-repeat center;
-	background-size: contain;
-	transition: background 0.3s;
-}
-span {
-	font-size: 20px;
-	@media (max-width: 767px) {
-		font-size: 15px;
-	}
-}
-div {
-	width: 500px;
-	height: 500px;
-
-	font-size: 30px;
-	@media (max-width: 767px) {
-		font-size: 20px;
-	}
+	scroll-behavior: smooth;
 }
