--- a/#src/scss/container.scss
+++ b/#src/scss/container.scss
@@ -1,16 +1,22 @@
 .wrap{
-	margin: 0 auto;
-	min-width: 350px;
-	min-height: 100%;
-	height: 100vh;
+	display: flex;
+	width: 100%;
+	// min-height: 100%;
 	overflow: hidden;
+	flex-direction: column;
+	justify-content: flex-start;
+	// align-items: center;
 
+	// min-width: 350px;
+	min-height: 100vh;
 
 }
 
 .container {
 	max-width: 1330px;
-	min-width:320px;
 	margin: 0 auto;
 	padding: 0 15px;
+	width: 100%;
+	min-width:320px;
+	min-height: 100%t;
 }
