- добавил отображение сетки

--- a/#src/scss/demo.scss
+++ b/#src/scss/demo.scss
@@ -1,11 +1,8 @@
-h1{
+h1, h2{
 	text-align: center;
 	margin-top: 2rem;
 }
-div{
-	margin-top: 2rem;
-	text-align: center;
-}
+
 .wrap{
 	background-color: #282C34;
 	color: #A3AAB6;
