- change css variable to  scss var fol greeds

--- a/#src/scss/demo.scss
+++ b/#src/scss/demo.scss
@@ -7,7 +7,7 @@
 	text-align: center;
 }
 .image{
-	width: var(--col-6);
+	width: $col-6;
 	text-align: center;
-	margin: 0 var(--ofs);
+	margin: 0 $ofs;
 }
