--- a/#src/scss/_grid.scss
+++ b/#src/scss/_grid.scss
@@ -1,15 +1,28 @@
-:root {
-	--ofs: 15px;//боковые отсупы
-	--col-1: calc(100% / 12 - var(--ofs) * 2);
-	--col-2: calc(100% / 12 * 2 - var(--ofs) * 2);
-	--col-3: calc(100% / 12 * 3 - var(--ofs) * 2);
-	--col-4: calc(100% / 12 * 4 - var(--ofs) * 2);
-	--col-5: calc(100% / 12 * 5 - var(--ofs) * 2);
-	--col-6: calc(100% / 12 * 6 - var(--ofs) * 2);
-	--col-7: calc(100% / 12 * 7 - var(--ofs) * 2);
-	--col-8: calc(100% / 12 * 8 - var(--ofs) * 2);
-	--col-9: calc(100% / 12 * 9 - var(--ofs) * 2);
-	--col-10: calc(100% / 12 * 10 - var(--ofs) * 2);
-	--col-11: calc(100% / 12 * 11 - var(--ofs) * 2);
-	--col-12: calc(100% / 12 * 12 - var(--ofs) * 2);
-}
+// :root {
+// 	--ofs: 15px;//боковые отсупы
+// 	--col-1: calc(100% / 12 - var(--ofs) * 2);
+// 	--col-2: calc(100% / 12 * 2 - var(--ofs) * 2);
+// 	--col-3: calc(100% / 12 * 3 - var(--ofs) * 2);
+// 	--col-4: calc(100% / 12 * 4 - var(--ofs) * 2);
+// 	--col-5: calc(100% / 12 * 5 - var(--ofs) * 2);
+// 	--col-6: calc(100% / 12 * 6 - var(--ofs) * 2);
+// 	--col-7: calc(100% / 12 * 7 - var(--ofs) * 2);
+// 	--col-8: calc(100% / 12 * 8 - var(--ofs) * 2);
+// 	--col-9: calc(100% / 12 * 9 - var(--ofs) * 2);
+// 	--col-10: calc(100% / 12 * 10 - var(--ofs) * 2);
+// 	--col-11: calc(100% / 12 * 11 - var(--ofs) * 2);
+// 	--col-12: calc(100% / 12 * 12 - var(--ofs) * 2);
+// }
+$ofs: 1rem;
+$col-1: calc(100% / 12 - #{$ofs} * 2);
+$col-2: calc(100% / 12 * 2 - #{$ofs} * 2);
+$col-3: calc(100% / 12 * 3 - #{$ofs} * 2);
+$col-4: calc(100% / 12 * 4 - #{$ofs} * 2);
+$col-5: calc(100% / 12 * 5 - #{$ofs} * 2);
+$col-6: calc(100% / 12 * 6 - #{$ofs} * 2);
+$col-7: calc(100% / 12 * 7 - #{$ofs} * 2);
+$col-8: calc(100% / 12 * 8 - #{$ofs} * 2);
+$col-9: calc(100% / 12 * 9 - #{$ofs} * 2);
+$col-10: calc(100% / 12 * 10 - #{$ofs} * 2);
+$col-11: calc(100% / 12 * 11 - #{$ofs} * 2);
+$col-12: calc(100% / 12 * 12 - #{$ofs} * 2);
