--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'reset.css';
+@import 'node_modules/reset-css/sass/_reset.scss';
 @import '_fonts';
 @import 'container';
 @import '_footer';
