--- a/#src/scss/_fonts.scss
+++ b/#src/scss/_fonts.scss
@@ -1,6 +1,15 @@
 // =============================================================================
 // Font Face
 // =============================================================================
+// 	100 – Thin || Hairline
+// 	200 – Extra Light || Ultra Light || Thin
+// 	300 – Light
+// 	400 – Normal || Regular
+// 	500 – Medium
+// 	600 – Semi Bold || Demi Bold
+// 	700 – Bold
+// 	800 – Extra Bold || Ultra Bold || Heavy
+// 	900 – Black || Heavy
 
 @mixin font-face($name, $path, $weight: null, $style: null, $exts: eot woff2 woff ttf svg) {
 	$src: null;
